<resources>
    <string name="app_name">QR-Tests</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="special">Special</string>
    <string name="create">Create</string>
    <string name="tests">Tests</string>
    <string name="scan">Scan</string>
    <string name="auth">Authentification</string>
    <string name="test_label">Test Label</string>
    <string name="addQuestion">Add a question</string>
    <string name="saveincloud">Save in cloud</string>
    <string name="saveOnDevice">Save on device</string>
    <string name="authorizacion">Authorizacion</string>
    <string name="password">Password</string>
    <string name="loginIn">Login in</string>
    <string name="register">Register</string>
    <string name="check">Check</string>
    <string name="testList">Test list</string>
    <string name="cloudTests">Cloud Tests</string>
    <string name="question">Question</string>
    <string name="option1">option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="choseLanguage">Chose language</string>
    <string name="choseTheme">Chose theme</string>
    <string name="exit">Exit</string>
    <string name="accauntSettings">Accaunt settings</string>
    <string name="newEmail">New email</string>
    <string name="changeEmail">Change email</string>
    <string name="newPassword">New password</string>
    <string name="changePassword">Change password</string>
    <string name="exitFromAccount">Exit from account</string>
    <string name="menu">Menu</string>
    <string name="createS">Create</string>
    <string name="test">Tests</string>
</resources>