<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_menu"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu" />
    <item
        android:id="@+id/nav_create"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/createS" />
    <item
        android:id="@+id/nav_test"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/test" />
    <item
        android:id="@+id/nav_scan"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/scan" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>
